UC-594 - Notification page. Fix align. Apply

--- a/src/Compent.uIntra/App_Plugins/Notification/List/notificationList.css
+++ b/src/Compent.uIntra/App_Plugins/Notification/List/notificationList.css
@@ -160,7 +160,7 @@
             border-bottom:1px solid var(--color-light-gray);
             position:relative;
             padding:13px 20px;
-            align-items:flex-start;
+            align-items:flex-end;
 
             &:last-child{
                 border:none;
